# ParallelMidTermProject

./: .gitignore  CMakeLists.txt  README.md  convert_to_grayscale.py  download_dataset.py  scale_grayscale_dataset  scale_grayscale_dataset.py
include/: GrayImage.h  benchmark.h  morphology.h  preprocessing.h
latex/: PC_course_project_template.aux  PC_course_project_template.bbl  PC_course_project_template.blg  PC_course_project_template.fdb_latexmk  PC_course_project_template.fls  PC_course_project_template.tex  egbib.bib
results/amdahl/scale_2.0x/: amdahl_results.csv
results/gustafson/: gustafson_results.csv
results/pipeline/: pipeline_results.csv
results/separable/: separable_results.csv  separable_results_without_simd.csv
results/strong_scaling/scale_2.0x/: strong_scaling_results.csv
results/weak_scaling/: weak_scaling_results.csv
script/: convert_to_grayscale.py  download_dataset.py  optimal_vs_sequential.py  pipeline_multithread.py  scale_grayscale_dataset.py  separable.py  strong_scaling.py  weak_scaling.py
slide/: beamerthemesintef.sty  beamerunifi.fdb_latexmk  beamerunifi.fls  beamerunifi.tex  beamerunifi.vrb
src/: GrayImage.cpp  benchmark.cpp  main.cpp  morphology.cpp  preprocessing.cpp
